--- a/package.json
+++ b/package.json
@@ -6,16 +6,25 @@
   "author": "Linus Vettiger <linus4123@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "@babel/core": "^7.6.0",
+    "@babel/preset-env": "^7.6.0",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.6",
     "eslint": "^6.4.0",
     "eslint-plugin-react": "^7.14.3",
+    "html-webpack-plugin": "^3.2.0",
     "jest": "^24.9.0",
-    "parcel-bundler": "^1.12.3"
+    "prop-types": "^15.7.2",
+    "webpack": "^4.40.2",
+    "webpack-cli": "^3.3.9",
+    "webpack-dev-server": "^3.8.1"
   },
   "dependencies": {
     "react": "^16.9.0",
     "react-dom": "^16.9.0"
   },
   "scripts": {
-    "dev": "parcel src/index.html"
+    "dev": "webpack-dev-server --open",
+    "build": "webpack -p"
   }
 }
