--- a/package.json
+++ b/package.json
@@ -15,13 +15,14 @@
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.9.0",
     "prop-types": "^15.7.2",
+    "react-hot-loader": "^4.12.13",
     "webpack": "^4.40.2",
     "webpack-cli": "^3.3.9",
     "webpack-dev-server": "^3.8.1"
   },
   "dependencies": {
     "react": "^16.9.0",
-    "react-dom": "^16.9.0"
+    "react-dom": "npm:@hot-loader/react-dom"
   },
   "scripts": {
     "dev": "webpack-dev-server --open",
