--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Vettiger, Linus <linus.vettiger@novartis.com>",
   "license": "MIT",
   "dependencies": {
+    "eslint-plugin-cypress": "^2.6.1",
     "next": "^9.0.6",
     "react": "^16.9.0",
     "react-dom": "^16.9.0"
@@ -13,9 +14,11 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "cy:run": "cypress run"
   },
   "devDependencies": {
+    "cypress": "^3.4.1",
     "eslint": "^6.4.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-plugin-import": "^2.18.2",
