--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "dev": "next",
     "build": "next build",
     "start": "next start",
-    "cy:run": "cypress run"
+    "cy:run": "cypress run",
+    "test": "yarn cy:run && jest",
+    "now-build": "yarn test && yarn build"
   },
   "devDependencies": {
     "cypress": "^3.4.1",
