--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ cache:
     # we also need to cache folder with Cypress binary
     - ~/.cache
 install:
-  - npm ci
+  - yarn ci
 script:
-  - npm test
-  - $(npm bin)/cypress run --record
+  - yarn test
+  - $(yarn bin)/cypress run --record
