--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ cache:
     # we also need to cache folder with Cypress binary
     - ~/.cache
 install:
-  - yarn ci
+  - yarn
 script:
   - yarn test
   - $(yarn bin)/cypress run --record
